--- a/style.css
+++ b/style.css
@@ -61,11 +61,10 @@ a {
 .main--hero {
     display: grid;
     width: 100%;
-    height: 100vh;
+    height: 110vh;
     grid-template-rows: 1fr 1fr;
     grid-template-areas: "hero"
                          "text";
-
 }
 
 .main--hero__nav {
@@ -73,18 +72,10 @@ a {
     grid-area: "hero";
     background-image: url("images/desktop-image-hero-1.jpg");
     background-repeat: no-repeat;
-    background-size: 100% 80%;
+    background-size: 100% 100%;
     background-position: auto 50%;
-    height: 50vh;
-    
-}
-
-.main--hero__text {
-    grid-area: "text";
-    display: grid;
-    grid-template-rows: 1fr 2fr 1fr;
-    align-content: center;
-
+    height: 40vh;
+    max-width: 534px;    
 }
 
 .hero--img__container {
@@ -103,17 +94,30 @@ a {
 
 }
 
+.main--hero__text {
+    grid-area: "text";
+    display: grid;
+    grid-template-rows: 1fr 2fr 1fr;
+    grid-template-columns: 1fr;
+    align-content: center;
+    max-width: 400px;
+    padding: 0 10% ;    
+
+}
+
 .hero--title {
+    
     font-weight: 600;
     font-size: 1.5rem;
-    width: 90%;
-    justify-self: center;
+    grid-row-start: 1;
+
 }
 
 .hero--text {
-    width: 90%;
+    grid-row-start: 2;
+
     justify-self: center;
-    font-size: 0.85rem;
+    font-size: 0.8rem;
     color:hsl(0, 0%, 63%);
     letter-spacing: 0.08rem;
 }
@@ -123,16 +127,55 @@ a {
 }
 
 .hero--buy {
+    text-transform: uppercase;
+    grid-row-start: 3;
+    grid-column-start: 1;
     align-self: center;
     font-weight: 500;
     font-size: 0.8rem;
     letter-spacing: 0.4rem;
+    justify-self: flex-start;
+    width: max-content;
+
+}
+
+.hero--arrow__container {
+    grid-row-start: 3;
+    grid-column-start: 1;
     justify-self: center;
-    width: 90%;
+    align-self: center;
+    width: max-content;
+    position: relative;
+    padding-left: 40px;
 }
 
 .main--furniture {
-        width: 100%;
-        height: 100px;
-        border: 1px solid red;
+    width: 100%;
+    height: auto;
+}
+
+.furniture--main__container {
+    
+
+}
+
+.main--furniture__text,
+.main--furniture__title {
+    padding: 0 10%;
+    max-width: 400px;
+
+}
+
+.main--furniture__title {
+    padding-top: 30px;
+    padding-bottom: 15px;
+    font-size: 0.85rem;
+    text-transform: uppercase;
+}
+
+.main--furniture__text {
+    justify-self: center;
+    font-size: 0.8rem;
+    color:hsl(0, 0%, 63%);
+    letter-spacing: 0.08rem;
 }
