--- a/style.css
+++ b/style.css
@@ -54,8 +54,7 @@ a {
     background:transparent;
 }
 .main--container {
-
- 
+    width: 100vw; 
 }
 
 .main--hero {
@@ -82,8 +81,6 @@ a {
     position: relative;
     left: 40%;
     bottom: 80%;
-   
-
 }
 
 
@@ -115,7 +112,6 @@ a {
 
 .hero--text {
     grid-row-start: 2;
-
     justify-self: center;
     font-size: 0.8rem;
     color:hsl(0, 0%, 63%);
@@ -154,10 +150,12 @@ a {
     height: auto;
 }
 
-.furniture--main__container {
-    
+.furniture--img__container {
+    width: 100%;    
+    height: auto;
 
 }
+
 
 .main--furniture__text,
 .main--furniture__title {
@@ -167,7 +165,7 @@ a {
 }
 
 .main--furniture__title {
-    padding-top: 30px;
+    padding-top: 50px;
     padding-bottom: 15px;
     font-size: 0.85rem;
     text-transform: uppercase;
@@ -178,4 +176,40 @@ a {
     font-size: 0.8rem;
     color:hsl(0, 0%, 63%);
     letter-spacing: 0.08rem;
+    padding: 0 10% 10% 10%;
 }
+
+.--container__img {
+    width: 100%;    
+    height: auto;
+
+}
+
+@media screen and (min-width: 768px) {
+    .main--container {
+        width: 100vw;
+    }
+    .main--hero {
+        display: grid;
+        height: 65.5vh;
+        grid-template-columns: 2fr 1fr;
+        grid-template-areas: "nav text";
+        
+    }
+
+    .hero--img__container {
+        max-width: 100%;
+        height: 120%;
+    }
+
+    .main--hero__nav {
+        grid-area: "nav";
+        height: 120%;
+    }
+
+    .main--hero__text {
+        grid-area: "text";
+    }
+}
+
+
